--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList"> Car </li>
+		<li data-ns-test="shoppingList"> house </li>
+
+		<li data-ns-test="shoppingList"> gold </li>
+
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList"> malaysia </li>
+		<li data-ns-test="holidayList"> Thailand </li>
+		<li data-ns-test="holidayList"> Monaco </li>
+		</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
